--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,36 +1,45 @@
-/* Estilos cartas */
-.carta{
-    background-color: rgb(0, 0, 0);
-    width: 200px;
-    display: inline-block;
-    margin: 10px;
-    border-radius: 10px;
+.listadoCartas{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    margin: 20px;
+
 }
-.carta div{
-    padding: 10px;
-    background-color: peru;
+
+/* Estilos cartas */
+.carta{   
+    background-color: #e48431;
+    width: 350px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 16px rgba(0,0,0,0.5);
+    
+}
+
+.carta > div{
+    padding: 20px;
+    background-color: #e48431;
     border-radius: 0px 0px 10px 10px ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 250px;
 }
 
 /* Estilos imagen */
 .carta img{
     width: 100%;
-    height: 150px;
+    height: 250px;
     object-fit: cover;
     border-radius: 10px 10px 0px 0px;
 }
 
 .carta button{
-    width: 100%;
-    padding: 5px;
-    margin-top: 20px;
-    background-color: burlywood;
-    cursor: pointer;
+    padding: 10px 20px;
+    background-color: #D9AF62;
+    color: black;
+    border: none;
     border-radius: 5px;
-
+    cursor: pointer;
 }
 
-.carta button:hover{
-    background-color: rgb(202, 167, 122);
-
-}
